--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title >INDIA COVID-19 TRACKER</title>
   </head>
-  <body style="background-color:rgb(240, 227, 238)">
+  <body style="background-color:rgb(243, 252, 197);overflow-x: hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
